--- a/2hw/portfolio.html
+++ b/2hw/portfolio.html
@@ -7,8 +7,8 @@
     <title>Portfolio</title>
     <!--Bootstrap Base CSS and Theme-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <!--Personal Stylesheet-->
-        <link rel="stylesheet" href=style.css>
+    <!--Personal Stylesheet-->
+    <link rel="stylesheet" href=style.css>
 </head>
 
   <body>
@@ -34,13 +34,12 @@
     </nav>
 
     <main>
-      <div class = container>
-        <div class ="row justify-content-start">
-            <div class = col-md>
+      <div class="container">
+        <div class="row justify-content-start">
+            <div class="col-md">
               <h2>Portfolio</h2>
             </div>
-          </div>
-      </div>
+        </div>
       <div class="album py-5">
           <div class="container-md">
               <div class="row justify-content-start">
@@ -96,6 +95,7 @@
                   </div>
               </div>
           </div>
+      </div>
       </div>
         
     </main>
