--- a/3hw/index.html
+++ b/3hw/index.html
@@ -25,7 +25,7 @@
         <div class="card-body">
             <p>Your Secure Password</p>
         </div>
-        <button class="btn btn-primary" type="submit" value="submit">Generate</button>
+        <button class="btn btn-primary" id="generate">Generate</button>
     </div>
 
   <!-- Bootstrap JS, Popper.js, and jQuery -->
