--- a/3hw/index.html
+++ b/3hw/index.html
@@ -20,7 +20,7 @@
   <!--Generator Body-->
     <div class="card">
         <div class="card-header">
-            <h5 class="card-header">Generate a Password</h5>
+            <h5>Generate a Password</h5>
         </div>
         <div class="card-body">
             <p>Your Secure Password</p>
