--- a/3hw/index.html
+++ b/3hw/index.html
@@ -25,8 +25,8 @@
                 <h5>Generate a Password</h5>
             </div>
             <div class="card-body">
-                <div class="card text">
-                <p>Your Secure Password</p>
+                <div class="card text text-center">
+                    <p>Your Secure Password</p>
                 </div>
                 <button type="button" class="btn btn-primary" id="generate">Generate</button>
             </div>
