--- a/3hw/index.html
+++ b/3hw/index.html
@@ -28,6 +28,8 @@
                 <div class="card text text-center">
                     <p>Your Secure Password</p>
                 </div>
+            </div>
+            <div class ="card-footer text-center">
                 <button type="button" class="btn btn-primary" id="generate">Generate</button>
             </div>
         </div>
