--- a/3hw/index.html
+++ b/3hw/index.html
@@ -21,7 +21,7 @@
   <!--Generator Body-->
     <div class="container-lg full-width">
         <div class="card">
-            <div class="card-header">
+            <div class="card-header bg-transparent">
                 <h5>Generate a Password</h5>
             </div>
             <div class="card-body">
@@ -29,7 +29,7 @@
                     <p>Your Secure Password</p>
                 </div>
             </div>
-            <div class ="card-footer text-center">
+            <div class ="card-footer text-center bg-transparent">
                 <button type="button" class="btn btn-primary" id="generate">Generate</button>
             </div>
         </div>
