--- a/3hw/index.html
+++ b/3hw/index.html
@@ -20,7 +20,7 @@
 
   <!--Generator Body-->
     <div class="container-lg full-width">
-        <div class="card">
+        <div class="card shadow-sm">
             <div class="card-header bg-transparent">
                 <h5>Generate a Password</h5>
             </div>
