--- a/3hw/index.html
+++ b/3hw/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!--Site Header-->
-    <header class="jumbotron jumbotron-fluid text-center">
+    <header class="jumbotron jumbotron-fluid text-center bg-transparent">
         <div class="container">
             <h1 class="display-4">Password Generator</h1>
         </div>
