--- a/3hw/index.html
+++ b/3hw/index.html
@@ -25,7 +25,7 @@
                 <h5>Generate a Password</h5>
             </div>
             <div class="card-body">
-                <div class="text-center" id="pW">
+                <div class="text-center">
                     <p>Your Secure Password</p>
                 </div>
             </div>
@@ -35,6 +35,8 @@
             </div>
         </div>
     </main>
+    <!--Hidden input field to hold Password for copying-->
+    <input type="text" value="" id="pW">
         
   <!-- Bootstrap JS, Popper.js, and jQuery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
