--- a/3hw/index.html
+++ b/3hw/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="card-body">
         <div class="text-center">
-          <input type="text" value="Your secure password!" id="pW"> 
+          <input type="text" class="form col-lg" value="Your secure password!" id="pW"> 
         </div>
       </div>
       <div class ="card-footer text-center bg-transparent">
