--- a/4hw/index.html
+++ b/4hw/index.html
@@ -21,11 +21,13 @@
   </header>
   <main>
     <div class='card'>
-        <div class='card-header text-center bg-transparent' id='title'>
+        <div class='card-header text-center bg-transparent' id='top'>
             <h3>Coding Quiz!</h3>
         </div>
-        <div class="card-text text-center" id='center'>
-          <p>Take this coding quiz! 15 Seconds per questions! Try to get a hi-score!</p>
+        <div class='card-text text-center'>
+          <p id='center'>Take this coding quiz! 15 Seconds per questions! Try to get a hi-score!</p>
+          <!--empty element used to position answer buttons-->
+          <p id='hanger'></p>
         </div>
         <div class='card-footer text-center bg-transparent' id='bottom'>
             <button type="button" class="btn btn-primary" id="start">Start</button>
