--- a/4hw/index.html
+++ b/4hw/index.html
@@ -25,7 +25,7 @@
             <h3>Coding Quiz!</h3>
         </div>
         <div class='card-text text-center'>
-          <p id='center'>Take this coding quiz! 15 Seconds per questions! Try to get a hi-score!</p>
+          <p id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
           <!--empty element used to position answer buttons-->
           <ul id='hanger'></ul>
         </div>
