--- a/4hw/index.html
+++ b/4hw/index.html
@@ -24,11 +24,19 @@
         <div class='card-header text-center bg-transparent' id='top'>
             <h3>Coding Quiz!</h3>
         </div>
-        <div class='card-body'>
-          <p class='card-text text-center' id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
-          <!--empty element used to position answer buttons-->
-          <ul id='hanger'></ul>
+        <div class='card-body text-center'>
+          <p class='card-text' id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
+          <ul class='card-text text-left' id='hanger'></ul>
+          <div id="nameField">
+            <p class='card-text'>Please enter your name and click the button to save your high score!</p>
+            <div class="input">
+              <input type="text" class="form align-middle" id="name" placeholder="Your name here!">
+              <button class="btn btn-outline-secondary btn-sm align-middle" type="button" id="save">Save</button>
+            </div>
+          </div>
         </div>
+      
+      
         <div class='card-footer text-center bg-transparent' id='bottom'>
             <button type="button" class="btn btn-primary" id="start">Start</button>
         </div>
