--- a/4hw/index.html
+++ b/4hw/index.html
@@ -22,8 +22,8 @@
   <main>
     <div class='card shadow-sm'>
         <div class='card-header text-center bg-transparent' id='top'>
-            <h3>Coding Quiz!</h3>
-            <h3 id="countdown"></h3>
+            <h3 class = "align-middle">Coding Quiz!</h3>
+            <h3 class="text-right align-middle" id="countdown"></h3>
         </div>
         <div class='card-body text-center'>
           <p class='card-text' id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
