--- a/4hw/index.html
+++ b/4hw/index.html
@@ -28,13 +28,13 @@
         <div class='card-body text-center'>
           <p class='card-text' id='center'>Take this coding quiz! 10 Seconds per question! Try to get a hi-score!</p>
           <ul class='card-text text-left' id='hanger'></ul>
-          <form id="nameField">
+          <div id="nameField">
             <p class='card-text'>Please enter your name and click the button to save your high score!</p>
             <div class="form">
               <input type="text" class="form align-middle" id="name" placeholder="Your name here!">
               <button class="btn btn-outline-secondary btn-sm align-middle" type="button" id="save">Save</button>
             </div>
-          </form>
+          </div>
         </div>
       
         <div class='card-footer text-center bg-transparent' id='bottom'>
